--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+  <!-- New -->
   <!-- Sidebar -->
   <div class="msb" id="msb">
     <nav class="navbar navbar-default" role="navigation">
