--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <!-- New -->
+  <!-- New 1 -->
   <!-- Sidebar -->
   <div class="msb" id="msb">
     <nav class="navbar navbar-default" role="navigation">
