--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         </div>
       </div>
     </div>
+    <div>
+      <div style="padding: 15px 0;">
+        <a href="#" id="msbo"><i class="ic fa fa-bars"></i></a>
+      </div>
+    </div>
   </section>
 
   <!-- Dashboard -->
