View project page added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div>
       <div style="padding: 15px 0;">
-        <a href="#" id="msbo"><i class="ic fa fa-bars"></i></a>
+        <a href="#" id="msbo"> <img src="img/left_arrow.png" alt="" srcset=""> </a>
       </div>
     </div>
   </section>
