--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="dropdown">
             <div class="btn-group">
               <button type="button" class="btn btn-outline-secondary bg-light text-black">Design Task</button>
-              <button type="button" class="btn btn-outline-secondary bg-light dropdown-toggle dropdown-toggle-split"
+              <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
               type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false"
               data-bs-reference="parent">
               <span class="visually-hidden">Toggle Dropdown</span>
@@ -182,8 +182,8 @@
                     <img src="img/timer_blue.png" alt="">
                   </div>
                   <div class="col-md-7">
-                    <div class="card-text-active1">Weekly activity</div>
-                    <span>57%</span>
+                    <div class="card-text-active1">Worked this week</div>
+                    <span> <strong> 11:56:33</strong></span>
                   </div>
                   <div class="col-md-2 decre">
                     <i class="fa-solid fa-caret-down icon-style text-danger"></i>
