--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
               <i class="fa-1_5x fa-solid fa-gauge-high"></i>
               <span class="mx-2">Dashboard</span>
             </a></li>
-            <!-- <li class="active"><a href="#"> <> Dashboard</a></li> -->
             <li class="mb-3"><a href="#"> 
               <i class="fa-1_5x fa-solid fa-chart-line"></i>
               <span class="mx-2">Activity</span>
@@ -360,8 +359,10 @@
   </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
+
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
