--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <title>Bootstrap </title>
 </head>
 
-<body>
+<body class="msb-x">
+
   <!-- Sidebar -->
   <div class="msb" id="msb">
     <nav class="navbar navbar-default" role="navigation">
@@ -126,9 +127,9 @@
   <!-- Dashboard -->
   <section id="Dashboard">
     <div class="container">
-      <div class="row grey-border">
+      <div class="gridViewPort grey-border">
         <!-- Timesheet -->
-        <div class="col-md-8 grey-border-right">
+        <div class=" grey-border-right">
           <div class="row mb-4">
             <div class="col">
               <p class="fw-bold fs-5">Timesheet</p>
@@ -158,7 +159,7 @@
           </table>
         </div>
         <!-- Report -->
-        <div class="col-md-4">
+        <div class="">
           <div class="mb-3">
             <div class="container">
               <h5 class="mb-4 fw-bold">Report</h5>
@@ -206,17 +207,17 @@
         </div>
         <!-- Todo list -->
       </div>
-      <div class="row">
-        <div class="col-md-8 grey-border-right">
+      <div class="gridViewPort">
+        <div class="grey-border-right">
           <h5 class="mt-3 fw-bold">To - Do lists</h5>
-          <div class="d-flex align-items-center mb-3">
-            <div class="col-md-1">
+          <div class="d-grid-2-side align-items-center mb-3">
+            <div class="">
               <div class="row">
                 <p class="text-center mb-0 date purp">06</p>
                 <p class="text-center mb-0 mon purp">May</p>
               </div>
             </div>
-            <div class="col-md-11 shad">
+            <div class=" shad">
               <div class="card ">
                 <div class="card-body pad">
                   <div class="row">
@@ -232,14 +233,14 @@
               </div>
             </div>
           </div>
-          <div class="d-flex align-items-center mb-3">
-            <div class="col-md-1">
+          <div class="d-grid-2-side align-items-center mb-3">
+            <div class="">
               <div class="row">
                 <p class="text-center mb-0 date">26</p>
                 <p class="text-center mb-0 mon">May</p>
               </div>
             </div>
-            <div class="col-md-11">
+            <div class="">
               <div class="card bg-light">
                 <div class="card-body pad">
                   <div class="row">
@@ -255,14 +256,14 @@
               </div>
             </div>
           </div>
-          <div class="d-flex align-items-center">
-            <div class="col-md-1">
+          <div class="d-grid-2-side align-items-center">
+            <div class="">
               <div class="row">
                 <p class="text-center mb-0 date">16</p>
                 <p class="text-center mb-0 mon">May</p>
               </div>
             </div>
-            <div class="col-md-11">
+            <div class="">
               <div class="card bg-light">
                 <div class="card-body pad">
                   <div class="row">
@@ -280,7 +281,7 @@
           </div>
         </div>
         <!-- Screenshots -->
-        <div class="col-md-4">
+        <div class="">
           <div class="pb-4 container">
             <h5 class="mt-3 fw-bold">Screenshots</h5>
             <div class="grey-border  rowWrapper">
