--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <!-- ACTIONS -->
   <section id="actions" class="py7 bg-white grey-border shad mb-4 bg-light">
     <div class="container ">
-      <div class="d-flex justify-content-between">
+      <div class="d-flex pad justify-content-between">
         <div class="col-md-10">
           <div class="dropdown">
             <div class="btn-group">
