--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class=" card-img-st">
                       <img src="img/graph.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="padL">
                       <div class="card-text-active">Weekly activity</div>
                       <span>57%</span>
                     </div>
@@ -186,7 +186,7 @@
                     <div class=" card-img-st1">
                       <img src="img/timer_blue.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="padL">
                       <div class="card-text-active1">Worked this week</div>
                       <span> <strong> 11:56:33</strong></span>
                     </div>
