--- a/index.html
+++ b/index.html
@@ -22,77 +22,103 @@
   <title>Bootstrap </title>
 </head>
 
-<body class="msb-x">
+<body class="msb-x p-0">
+  <button class="btn btn-outlined-primary msbo" id="msbo" type="button" data-bs-toggle="offcanvas"
+    data-bs-target="#sidebar" aria-controls="sidebar">
+    <i class="fa-solid fa-circle-chevron-left fa-2x side-pane-icon"></i>
+  </button>
 
-  <!-- Sidebar -->
-  <div class="msb" id="msb">
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="navbar-logo">
-        <img src="img/logo.png" alt="" srcset="">
-      </div>
+  <div class="offcanvas offcanvas-start ps-4 pt-4" tabindex="-1" data-bs-backdrop="false" id="sidebar"
+    aria-labelledby="sidebarLabel" style="width: 15em; background-color: #382f9c !important;">
+    <div class="offcanvas-header pb-3">
+      <img src="img/logo.png" alt="" srcset="">
+    </div>
+    <div class="offcanvas-body">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-gauge-high"></i>
+            <span class="mx-3 ">Dashboard</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-chart-line"></i>
+            <span class="mx-3 ">Activity</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-clock-rotate-left"></i>
+            <span class="mx-3 ">Timesheet</span>
+          </a>
+        </li>
+      </ul>
+      <hr class="hr fw-bold rounded " style="width: 2em; height: 0.2em; color: grey;" />
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-calendar-check"></i>
+            <span class="mx-3 ">To-Do</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-receipt"></i>
+            <span class="mx-3 ">Invoice</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-folder"></i>
+            <span class="mx-3 ">Project</span>
+          </a>
+        </li>
+      </ul>
+      <hr class="hr fw-bold rounded " style="width: 2em; height: 0.2em; color: grey;" />
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-circle-question"></i>
+            <span class="mx-3 ">Help</span>
+          </a>
+        </li>
+        <li class="mb-3">
+          <a class="d-flex nav-link text-white" href="#">
+            <i class="fa-1_5x fa-solid fa-download"></i>
+            <span class="mx-3 ">Download App</span>
+          </a>
+        </li>
+      </ul>
 
-      <!-- Main Menu -->
-      <div class=" side-menu-container text-white h-100">
-        <div class="">
-          <ul class="nav navbar-nav">
-            <li class="mb-3"><a href="#" class="waves-effect active">
-                <i class="fa-1_5x fa-solid fa-gauge-high"></i>
-                <span class="mx-2">Dashboard</span>
-              </a></li>
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-chart-line"></i>
-                <span class="mx-2">Activity</span>
-              </a></li>
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-clock-rotate-left"></i>
-                <span class="mx-2">Timesheet</span>
-              </a></li>
-          </ul>
+    </div>
 
-          <ul class="nav navbar-nav">
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-calendar-check"></i>
-                <span class="mx-2">To-Do</span>
-              </a></li>
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-receipt"></i>
-                <span class="mx-2">Invoice</span>
-              </a></li>
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-folder"></i>
-                <span class="mx-2">Project</span>
-              </a></li>
-          </ul>
-          <ul class="nav navbar-nav">
-            <li class="mb-3"><a href="#">
-                <i class="fa-1_5x fa-solid fa-circle-question"></i>
-                <span class="mx-2">Help</span>
-              </a></li>
-            <li class="mb-3"><a href="#"> <i class="fa-1_5x fa-solid fa-download"></i>
-                <span class="mx-2">Download App</span>
-              </a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer w-100">
-        <span class=" d-flex justify-content-around align-items-center">
-          <i class="fa-1_5x text-white fa-solid fa-bell">
-            <span class="badge bg-danger position-absolute rounded-pill translate-middle" style="font-size: 8px;">
-              99+
-              <span class="visually-hidden">unread messages</span>
-            </span></i>
-          <img src="img/settings.png" alt="">
-          <i class="fa-1_5x  fa-solid fa-circle-user fa-white"></i>
-        </span>
-      </div>
-    </nav>
+    <div style="position: absolute; bottom: 1.7em; left: 0em; width: 2em;">
+      <img class="img-fluid " src="img/sidebar_overlay.png" alt="">
+    </div>
+
+    <div class="offcanvas-footer ">
+      <span class=" d-flex justify-content-around align-items-center pb-2">
+        <i class="fa-1_5x text-white fa-solid fa-bell">
+          <span class="badge bg-danger position-absolute rounded-pill translate-middle" style="font-size: 8px;">
+            99+
+            <span class="visually-hidden">unread messages</span>
+          </span></i>
+        <div class="vr" style="color: grey;"></div>
+        <img src="img/settings.png" alt="">
+        <div class="vr" style="color: grey;"></div>
+        <i class="  fa-solid fa-circle-user" style="color: white; font-size: 1.5em;
+        width: 15%"></i>
+      </span>
+    </div>
   </div>
 
+
   <!-- ACTIONS -->
-  <section id="actions" class="py7 bg-white grey-border shad mb-4 bg-light">
+  <section id="actions" class="border-bottom mb-4 py-3 shadow">
     <div class="container ">
-      <div class="d-flex pad justify-content-between">
-        <div class="col-md-10">
+      <div class="row gx-0 justify-content-between">
+        <div class="col-md-10 col-6">
           <div class="dropdown">
             <div class="btn-group">
               <button type="button" class="btn btn-outline-secondary bg-light text-black">Design Task</button>
@@ -109,7 +135,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <button type="button" class="btn btn-outline-secondary add-btn" data-bs-toggle="modal"
             data-bs-target="#exampleModal">
             <i class="fas fa-plus"></i> Add Project
@@ -119,22 +145,19 @@
     </div>
   </section>
 
-  <!-- Sidebar toggle icon -->
-  <div class="msbo">
-    <a href="#" id="msbo"> <i class="fa-solid fa-circle-chevron-left fa-2x side-pane-icon"></i> </a>
-  </div>
+
 
   <!-- Dashboard -->
   <section id="Dashboard">
     <div class="container">
-      <div class="gridViewPort grey-border">
+      <div class="row grey-border p-0">
         <!-- Timesheet -->
-        <div class=" grey-border-right">
-          <div class="row mb-4">
-            <div class="col">
-              <p class="fw-bold fs-5">Timesheet</p>
+        <div class="col col-md-8">
+          <div class="d-flex justify-content-between mb-3">
+            <div class="">
+              <span class="fw-bold fs-5">Timesheet</span>
             </div>
-            <div class="col d-flex justify-content-end align-items-center">
+            <div class=" ">
               <a href="details.html" class="btn btn-secondary time-sheet-btn">
                 Full Timesheet
               </a>
@@ -159,40 +182,41 @@
           </table>
         </div>
         <!-- Report -->
-        <div class="">
+        <div class="col col-md-4">
           <div class="mb-3">
-            <div class="container">
+            <div class="">
               <h5 class="mb-4 fw-bold">Report</h5>
               <div class="card bg-color text-white mb-3">
                 <div class="card-body ">
-                  <div class="d-grid align-items-center " style="grid-template-columns: 0.3fr 1fr .3fr;">
+                  <div class="d-grid align-items-center gap-2 " style="grid-template-columns: 0.3fr 1fr .3fr;">
                     <div class=" card-img-st">
                       <img src="img/graph.png" alt="">
                     </div>
-                    <div class="padL">
+                    <div class="">
                       <div class="card-text-active">Weekly activity</div>
                       <span>57%</span>
                     </div>
-                    <div class=" incre">
-                      <i class="fa-solid fa-caret-up icon-style"></i>
-                      <span class="incre-font"> 17%</span>
+                    <div class=" d-flex justify-content-center align-items-baseline bg-success col-11  rounded-1">
+                      <i class="fa-solid fa-caret-up icon-style me-1"></i>
+                      <span class="p-1" style="font-size: 0.7em; font-weight: 500;"> 17%</span>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="card mb-4 bg-light">
                 <div class="card-body">
-                  <div class="d-grid align-items-center " style="grid-template-columns: 0.3fr 1fr .3fr;">
+                  <div class="d-grid align-items-center gap-2" style="grid-template-columns: 0.3fr 1fr .3fr;">
                     <div class=" card-img-st1">
                       <img src="img/timer_blue.png" alt="">
                     </div>
-                    <div class="padL">
+                    <div class="">
                       <div class="card-text-active1">Worked this week</div>
                       <span> <strong> 11:56:33</strong></span>
                     </div>
-                    <div class=" decre">
-                      <i class="fa-solid fa-caret-down icon-style text-danger"></i>
-                      <span class="incre-font text-danger"> 17%</span>
+                    <div
+                      class=" d-flex justify-content-center align-items-baseline bg-danger  bg-opacity-25 col-11  rounded-1">
+                      <i class="fa-solid fa-caret-down icon-style text-danger me-1"></i>
+                      <span class="p-1 text-danger" style="font-size: 0.7em;font-weight: 500;"> 17%</span>
                     </div>
                   </div>
                 </div>
@@ -205,12 +229,13 @@
             </div>
           </div>
         </div>
-        <!-- Todo list -->
+
       </div>
-      <div class="gridViewPort">
-        <div class="grey-border-right">
+      <div class="row ">
+        <!-- Todo list -->
+        <div class="col col-md-8">
           <h5 class="mt-3 fw-bold">To - Do lists</h5>
-          <div class="d-grid-2-side align-items-center mb-3">
+          <div class="d-grid gap-2 align-items-center mb-3" style=" grid-template-columns: 0.2fr 2fr;">
             <div class="">
               <div class="row">
                 <p class="text-center mb-0 date purp">06</p>
@@ -233,7 +258,7 @@
               </div>
             </div>
           </div>
-          <div class="d-grid-2-side align-items-center mb-3">
+          <div class="d-grid gap-2 align-items-center mb-3" style=" grid-template-columns: 0.2fr 2fr;">
             <div class="">
               <div class="row">
                 <p class="text-center mb-0 date">26</p>
@@ -256,7 +281,7 @@
               </div>
             </div>
           </div>
-          <div class="d-grid-2-side align-items-center">
+          <div class="d-grid gap-2 align-items-center mb-3" style=" grid-template-columns: 0.2fr 2fr;">
             <div class="">
               <div class="row">
                 <p class="text-center mb-0 date">16</p>
@@ -281,34 +306,55 @@
           </div>
         </div>
         <!-- Screenshots -->
-        <div class="">
-          <div class="pb-4 container">
+        <div class="col col-md-4">
+          <div class="pb-4 ">
             <h5 class="mt-3 fw-bold">Screenshots</h5>
-            <div class="grey-border  rowWrapper">
-              <img src="img/picture.png" class="img-rounded" alt="Cinque Terre">
-              <p class="col-md-8 mb-0">shot_1_attach_1.png</p>
-              <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
-                style="font-size: x-small;">
-                View
-              </button>
+            <div class="d-grid px-2 px-md-0 grey-border" style="grid-template-columns: 0.3fr 1fr .3fr;">
+              <div class="">
+                <img src="img/picture.png" class="img-rounded" alt="Cinque Terre">
+              </div>
+              <div class="">
+                <p>shot_1_attach_1.png</p>
+              </div>
+              <div class="">
+                <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
+                  style="font-size: x-small;">
+                  View
+                </button>
+              </div>
             </div>
-            <div class="grey-border rowWrapper">
-              <img src="img/picture.png" class="img-rounded" alt="Cinque Terre">
-              <p class="col-md-8 mb-0">shot_1_attach_3.png</p>
-              <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
-                style="font-size: x-small;">
-                View
-              </button>
+            <div class="d-grid px-2 pt-2 px-md-0 grey-border " style="grid-template-columns: 0.3fr 1fr .3fr;">
+
+              <div class="col">
+                <img src="img/picture.png" class="img-rounded" alt="Cinque Terre">
+              </div>
+              <div class="col-md-8 mb-0">
+                <p>shot_1_attach_3.png</p>
+              </div>
+              <div class="col">
+                <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
+                  style="font-size: x-small;">
+                  View
+                </button>
+              </div>
             </div>
-            <div class="grey-border rowWrapper">
-              <img src="img/video_camera.png" class="img-rounded" alt="Cinque Terre">
-              <p class="col-md-8 mb-0">Screen_record_12.mov</p>
-              <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
-                style="font-size: x-small;">
-                View
-              </button>
+            <div class="d-grid px-2 pt-2 px-md-0 grey-border " style="grid-template-columns: 0.3fr 1fr .3fr;">
+
+              <div class="col">
+                <img src="img/video_camera.png" class="img-rounded" alt="Cinque Terre">
+              </div>
+              <div class="col-md-8 mb-0">
+                <p>Screen_record_12.mov</p>
+              </div>
+              <div class="col">
+                <button type="button" class="btn col-md-2 w-100 btn-outline-secondary view-btn fw-bold"
+                  style="font-size: x-small;">
+                  Play
+                </button>
+              </div>
+
             </div>
-            <button type="button" class=" btn btn-outline-secondary view-btn  " style="width: 97%;">
+            <button type="button" class="btn btn-outline-secondary view-btn  mt-3" style="width: 97%;">
               View all
             </button>
           </div>
